New-Upload-1755854042013/objects/Adminified_Organization_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Trailhead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                    <default>true</default>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Provider__c</fullName>
        <label>Storage Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Adminified Organization Settings</label>
    <nameField>
        <displayFormat>ORG-{0000}</displayFormat>
        <label>Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adminified Organization Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>